[feat] Changed cors rules for dev server